fixed broken file paths & added alt text

--- a/posts/2023-07-31-openscapes-website/index.qmd
+++ b/posts/2023-07-31-openscapes-website/index.qmd
@@ -30,7 +30,7 @@ So why the need to port the Openscapes website to Quarto? Julie originally built
 #| fig-align: center
 #| out-width: "85%" 
 #| fig-alt: "The old Openscapes website landing page, built with blogdown. A banner image reads \"OPENSCAPES Let's do better science in less time together\" on top of a grassy landscape drawing with trees, deer, a raccoon, and a fox. A condor soars overhead and blue mountains stretch across the background. Below the banner reads the header, \"WHAT WE DO\" underlined in blue"
-knitr::include_graphics("old_site.png")
+knitr::include_graphics("media/old_site.png")
 ```
 
 ::: {.small-text .center-text .dark-gray-text}
@@ -69,7 +69,7 @@ While Julie, Stef, and I all had some level of experience using Quarto, we were 
 #| fig-align: center
 #| out-width: "60%" 
 #| fig-alt: "A little monster in a cool black jacket and sunglasses, leaning casually against a fence with a sign reading \"Warning! Live troubleshooting!\""
-knitr::include_graphics("live-troubleshooting.png")
+knitr::include_graphics("media/live-troubleshooting.png")
 ```
 
 ::: {.small-text .center-text .dark-gray-text}
@@ -114,7 +114,7 @@ For example, note how elements organized in columns (e.g. Engage/Empower/Amplify
 #| echo: false
 #| fig-align: center
 #| out-width: "80%" 
-#| fig-alt: ""
+#| fig-alt: "The Openscapes website's landing page, viewed in a browser window that stretches across the full width of a laptop screen. The user scrolls up and down to show text and elements arranged in side-by-side columns. The user then makes the browser window narrower, which causes the columns to rearrange and stack vertically, so that elements fit neatly within the available viewport space."
 knitr::include_graphics("media/laptop.gif")
 ```
 
@@ -125,7 +125,7 @@ as opposed to columns getting crunched when the browser window is made narrower:
 #| echo: false
 #| fig-align: center
 #| out-width: "40%" 
-#| fig-alt: ""
+#| fig-alt: "A narrow browser windown with three columns of text that are smooshed together and difficult to read."
 knitr::include_graphics("media/non-responsive.png")
 ```
 
@@ -182,7 +182,7 @@ Here's the above example in action:
 #| echo: false
 #| fig-align: center
 #| out-width: "80%" 
-#| fig-alt: ""
+#| fig-alt: "Three columns of text that read \"left-hand column content\", \"center column content\", and \"right-hand column content\", whjich are side-by-side when the browser window is full-width. As the browser window is made smaller, the three columns stack vertically."
 knitr::include_graphics("media/columns.gif")
 ```
 
@@ -200,7 +200,6 @@ Okay, I couldn't choose one, so here are my top two:
 #| fig-align: center
 #| out-width: "85%" 
 #| fig-alt: "The Openscapes website's landing page, as viewed on a mobile device. To the right is the \"Inspect\" window, which shows the webpage's underlying HTML and CSS. A button with a laptop and phone icon at the top of this section is circled in red. Clicking this button toggles between mobile and standard computer viewport sizes."
-
 knitr::include_graphics("media/mobile-view.png")
 ```
 
